--- a/examples/templ/training/plaintext_template.templ
+++ b/examples/templ/training/plaintext_template.templ
@@ -1,16 +1,20 @@
 NeIC training news letter %(date)s
-    
-These are upcoming Nordic training events from the neic-training calendar 
-https://wiki.neic.no/wiki/Training. Please follow the links for up to date 
+
+These are upcoming Nordic training events from the neic-training calendar
+https://wiki.neic.no/wiki/Training. Please follow the links for up to date
 and accurate information.
 
-To subscribe to this email list please send an email with subject Subscribe 
-to training-announce@neic.nordforsk.org. If you know of an upcoming training 
-event that would be suitable for this list, please contact us at 
+To subscribe to this email list please go here:
+
+https://neic.nordforsk.org/mailman/listinfo/training-announce
+
+Alternatively, you can send an email with subject Subscribe to
+training-announce@neic.nordforsk.org. If you know of an upcoming training event
+that would be suitable for this list, please contact us at
 training@neic.nordforsk.org.
 
 You can also follow this feed at https://neic.nordforsk.no/training.
-        
+
 Upcoming training events:
 %(summary)s
 
