Fix webpage url.

--- a/examples/templ/training/plaintext_template.templ
+++ b/examples/templ/training/plaintext_template.templ
@@ -13,7 +13,7 @@ training-announce@neic.nordforsk.org. If you know of an upcoming training event
 that would be suitable for this list, please contact us at
 training@neic.nordforsk.org.
 
-You can also follow this feed at https://neic.nordforsk.no/training.
+You can also follow this feed at https://neic.nordforsk.org/training.
 
 Upcoming training events:
 %(summary)s
