--- a/examples/templ/training/html_template.templ
+++ b/examples/templ/training/html_template.templ
@@ -8,7 +8,7 @@
     <p>To subscribe to this email list please <a href="https://neic.nordforsk.org/mailman/listinfo/training-announce">register at this website</a>. Alternatively, you can send us a <a href="mailto:training-announce@neic.nordforsk.org?subject=Subscribe">subscribe email</a>.
        If you know of an upcoming training event that would be suitable for this list, please <a href="mailto:training@neic.nordforsk.org">contact us</a>.</p>
 
-    <p>You can also follow this feed <a href="https://neic.nordforsk.no/training">on the web</a>.</p>
+    <p>You can also follow this feed <a href="https://neic.nordforsk.org/training">on the web</a>.</p>
 
     <h2>Upcoming training events</h2>
     <ol>%(summary)s</ol>
