Update urls to use new website and mail server.

--- a/examples/templ/training/plaintext_template.templ
+++ b/examples/templ/training/plaintext_template.templ
@@ -6,14 +6,13 @@ and accurate information.
 
 To subscribe to this email list please go here:
 
-https://neic.nordforsk.org/mailman/listinfo/training-announce
+https://neic.no/mailman/listinfo/training-announce
 
 Alternatively, you can send an email with subject Subscribe to
-training-announce@neic.nordforsk.org. If you know of an upcoming training event
-that would be suitable for this list, please contact us at
-training@neic.nordforsk.org.
+training-announce@neic.no. If you know of an upcoming training event that would
+be suitable for this list, please contact us at training@neic.no.
 
-You can also follow this feed at https://neic.nordforsk.org/training.
+You can also follow this feed at https://neic.no/training/upcoming.
 
 Upcoming training events:
 %(summary)s
@@ -27,4 +26,4 @@ Details follow below.
 --------------------------------------------------------------------------
 
 To unsubscribe from this list please send an email with subject Unsubscribe
-to training-announce@neic.nordforsk.org.
+to training-announce@neic.no.
