--- a/examples/templ/training/html_template.templ
+++ b/examples/templ/training/html_template.templ
@@ -2,13 +2,13 @@
   <head></head>
   <body style="font-size:small;">
     <h1>NeIC training news letter %(date)s</h1>
-    <p>These are upcoming Nordic training events from the <a href="https://wiki.neic.no/wiki/Training">neic-training</a> calendar.
+    <p>These are upcoming Nordic training events from the <a href="https://wiki.neic.no/wiki/Training#Training calendar">neic-training</a> calendar.
        Please follow the links for up to date and accurate information.</p>
 
-    <p>To subscribe to this email list please <a href="https://neic.nordforsk.org/mailman/listinfo/training-announce">register at this website</a>. Alternatively, you can send us a <a href="mailto:training-announce@neic.nordforsk.org?subject=Subscribe">subscribe email</a>.
-       If you know of an upcoming training event that would be suitable for this list, please <a href="mailto:training@neic.nordforsk.org">contact us</a>.</p>
+    <p>To subscribe to this email list please <a href="https://neic.no/mailman/listinfo/training-announce">register at this website</a>. Alternatively, you can send us a <a href="mailto:training-announce@neic.no?subject=Subscribe">subscribe email</a>.
+       If you know of an upcoming training event that would be suitable for this list, please <a href="mailto:training@neic.no">contact us</a>.</p>
 
-    <p>You can also follow this feed <a href="https://neic.nordforsk.org/training">on the web</a>.</p>
+    <p>You can also follow this feed <a href="https://neic.no/training/upcoming">on the web</a>.</p>
 
     <h2>Upcoming training events</h2>
     <ol>%(summary)s</ol>
@@ -16,6 +16,6 @@
     <hr>
     %(details)s
     <hr>
-    <p>To unsubscribe from this list please send us an <a href="mailto:training-announce-subscribe@whatever.org?subject=Unsubscribe">unsubscribe email</a>.</p>
+    <p>To unsubscribe from this list please send us an <a href="mailto:training-announce-subscribe@neic.no?subject=Unsubscribe">unsubscribe email</a>.</p>
   </body>
 </html>
